/*
  CarStandFCOOL API

  An API for managing a cloud-based car dealership service

  The version of the OpenAPI document: 1.0.0

  Generated by OpenAPI Generator: https://openapi-generator.tech
*/

syntax = "proto3";

package openapitools;


message Meeting {

  // ID of the meeting
  int32 meetingId = 1;

  // ID of the client attending the meeting
  int32 clientId = 2;

  // Scheduled date and time for the meeting
  string scheduleDate = 3;

  // Current status of the meeting
  enum StatusEnum {
    StatusEnum_UNKNOWN = 0;
    StatusEnum_SCHEDULED = 1;
    StatusEnum_COMPLETED = 2;
    StatusEnum_CANCELED = 3;
  }

  StatusEnum status = 4;

}
